--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "ownerNumber": "6281575886399@s.whatsapp.net",
-  "ownerName": "riycoders",
-  "botName": "Minato-Md",
+  "ownerNumber": "6285749091178@s.whatsapp.net",
+  "ownerName": "SpaceID Dev",
+  "botName": "SpaceID",
   "footer": "Support By xcodeteam.xyz",
   "packname": "Created By",
   "author": "@riycoders",
@@ -12,9 +12,9 @@
     "instagram": "https://instagram.com/riycoders"
   },
   "donasi": {
-    "dana": "081575886399",
-    "gopay": "081575886399",
-    "pulsa": "081575886399"
+    "dana": "085749091188",
+    "gopay": "085749091188",
+    "pulsa": "085749091188"
   },
   "gamewaktu": 90,
   "limitCount": 25,
